--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
     "from copy import deepcopy\n",
     "from pprint import pprint\n",
     "\n",
-    "import mbison.utils as dmut\n",
+    "import mbison.client.utils as dmut\n",
     "\n",
     "from nbdev.showdoc import patch_to"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "DomoAuth(domo_instance='domo-community', username='jae@datacrew.space')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +306,13 @@
     "    def __init__(self, cls, auth=None, message: str = None):\n",
     "        cls_instance = cls\n",
     "\n",
-    "        if hasattr(cls, \"__cls__\"):\n",
+    "        if hasattr(cls, \"__class__\"):\n",
     "            cls_instance = cls\n",
-    "            cls = cls.__cls__\n",
+    "            cls = cls.__class__\n",
     "\n",
-    "        domo_instance = {\n",
-    "            (cls_instance and cls_instance.auth.domo_instance)\n",
-    "            or (auth and auth.domo_instance)\n",
-    "        }\n",
+    "        domo_instance = (\n",
+    "            cls_instance and cls_instance.auth and cls_instance.auth.domo_instance\n",
+    "        ) or (auth and auth.domo_instance)\n",
     "\n",
     "        message = f\"{message or 'error'} || {cls.__name__}\"\n",
     "\n",
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
