--- a/nbs/client/utils.ipynb
+++ b/nbs/client/utils.ipynb
@@ -33,7 +33,9 @@
     "import zipfile\n",
     "import io\n",
     "import datetime as dt\n",
-    "import dateutil"
+    "import dateutil\n",
+    "\n",
+    "import re"
    ]
   },
   {
@@ -144,6 +146,24 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
+    "def convert_str_to_snake_case(text_str, is_only_alphanumeric: bool = False):\n",
+    "    \"\"\"converts 'snake_case_str' to 'snakeCaseStr'\"\"\"\n",
+    "\n",
+    "    text_str = text_str.replace(\" \", \"_\").lower()\n",
+    "\n",
+    "    if is_only_alphanumeric:\n",
+    "        text_str = re.sub(r\"\\W+\", \"\", text_str)\n",
+    "\n",
+    "    return text_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
