--- a/nbs/feature/appdb.ipynb
+++ b/nbs/feature/appdb.ipynb
@@ -42,7 +42,11 @@
     "from numbers import Number\n",
     "\n",
     "import mbison.client.core as dmda\n",
-    "import mbison.client.utils as dmut"
+    "import mbison.client.utils as dmut\n",
+    "\n",
+    "import time \n",
+    "\n",
+    "from nbdev.showdoc import patch_to"
    ]
   },
   {
@@ -414,14 +418,16 @@
     "\n",
     "def modify_collection_permissions(\n",
     "    collection_id: str,\n",
-    "    user_id: str,\n",
     "    auth: dmda.DomoAuth,\n",
+    "    user_id: str = None,\n",
+    "    group_id : str = None,\n",
     "    permission=Collection_Permission_Enum.READ_CONTENT,\n",
     "    debug_api: bool = False,\n",
+    "    return_raw: bool = False\n",
     "):\n",
     "\n",
     "    endpoint = (\n",
-    "        f\"/api/datastores/v1/collections/{collection_id}/permission/USER/{user_id}\"\n",
+    "        f\"/api/datastores/v1/collections/{collection_id}/permission/{'USER' if user_id else {'GROUP'}}/{user_id or group_id}\"\n",
     "    )\n",
     "    params = {\n",
     "        \"overwrite\": False,\n",
@@ -440,11 +446,17 @@
     "        debug_api=debug_api,\n",
     "    )\n",
     "\n",
+    "    if return_raw:\n",
+    "        return res\n",
+    "\n",
     "    if not res.is_success:\n",
     "        raise AppDb_API_Exception(\n",
     "            res,\n",
     "            message=\"unable to set permissions for {user_id} to {permission.value} in collection {collection_id}\",\n",
     "        )\n",
+    "    \n",
+    "    res.response = f\"set permissions for {user_id} to {permission.value} in collection {collection_id}\"\n",
+    "    \n",
     "\n",
     "    return res"
    ]
@@ -457,7 +469,7 @@
     {
      "data": {
       "text/plain": [
-       "ResponseGetData(response='', is_success=True, status=204, download_path=None)"
+       "ResponseGetData(response='set permissions for 1893952720 to READ_CONTENT in collection b71d2341-8fe4-41af-b55b-163de11a906d', is_success=True, status=204, download_path=None)"
       ]
      },
      "execution_count": 16,
@@ -729,33 +741,7 @@
     "\n",
     "        return cls._from_json(auth=auth, obj=res.response)\n",
     "\n",
-    "    def query_documents(\n",
-    "        self,\n",
-    "        debug_api: bool = False,\n",
-    "        query: dict=None,\n",
-    "        return_raw: bool = False,\n",
-    "    ):\n",
-    "\n",
-    "        res = query_collection_documents(\n",
-    "            auth=self.auth,\n",
-    "            collection_id=self.id,\n",
-    "            debug_api=debug_api,\n",
-    "            query=query,\n",
-    "        )\n",
-    "\n",
-    "        if return_raw:\n",
-    "            return res\n",
-    "\n",
-    "        self.domo_documents = [\n",
-    "                AppDbDocument.get_by_id(\n",
-    "                    collection_id=self.id,\n",
-    "                    document_id=doc[\"id\"], auth=self.auth\n",
-    "                )\n",
-    "                for doc in res.response\n",
-    "            ]\n",
-    "        \n",
-    "        return self.domo_documents\n",
-    "\n",
+    "    \n",
     "    def __eq__(self, other):\n",
     "        if not isinstance(other, AppDbCollection):\n",
     "            return False\n",
@@ -765,7 +751,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exports\n",
+    "\n",
+    "\n",
+    "@patch_to(AppDbCollection)\n",
+    "def share_collection(\n",
+    "    self,\n",
+    "    domo_user=None,\n",
+    "    domo_group=None,\n",
+    "    permission: Collection_Permission_Enum = Collection_Permission_Enum.READ_CONTENT,\n",
+    "    debug_api : bool = False\n",
+    "):\n",
+    "    return modify_collection_permissions(\n",
+    "        collection_id=self.id,\n",
+    "        user_id=(domo_user and domo_user.id) or self.auth.who_am_i()[\"id\"],\n",
+    "        group_id=domo_group and domo_group.id,\n",
+    "        permission=permission,\n",
+    "        auth=self.auth,\n",
+    "        debug_api= debug_api\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "@patch_to(AppDbCollection)\n",
+    "def query_documents(\n",
+    "    self,\n",
+    "    debug_api: bool = False,\n",
+    "    query: dict = None,\n",
+    "    return_raw: bool = False,\n",
+    "    try_auto_share=False,\n",
+    "):\n",
+    "\n",
+    "    documents = []\n",
+    "    loop_retry = 0\n",
+    "    while loop_retry <= 1 and not documents:\n",
+    "        try:\n",
+    "            res = query_collection_documents(\n",
+    "                auth=self.auth,\n",
+    "                collection_id=self.id,\n",
+    "                debug_api=debug_api,\n",
+    "                query=query,\n",
+    "            )\n",
+    "\n",
+    "            documents = res.response\n",
+    "\n",
+    "        except AppDb_API_Exception as e:\n",
+    "            if try_auto_share:\n",
+    "                self.share_collection(debug_api = debug_api)\n",
+    "                time.sleep(2)\n",
+    "\n",
+    "            loop_retry += 1\n",
+    "\n",
+    "            if loop_retry > 1:\n",
+    "                raise e\n",
+    "\n",
+    "        if return_raw:\n",
+    "            return res\n",
+    "\n",
+    "        self.domo_documents = [\n",
+    "            AppDbDocument.get_by_id(\n",
+    "                collection_id=self.id, document_id=doc[\"id\"], auth=self.auth\n",
+    "            )\n",
+    "            for doc in documents\n",
+    "        ]\n",
+    "\n",
+    "        return self.domo_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResponseGetData(response='set permissions for 1893952720 to READ_CONTENT in collection 0f68f250-df2c-4a15-98ef-9cdd851602eb', is_success=True, status=204, download_path=None)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "domo_collection = AppDbCollection.get_by_id(auth = auth, \n",
+    "                          collection_id= document['collectionId'],\n",
+    "                          debug_api= False\n",
+    "                          )\n",
+    "\n",
+    "domo_collection.share_collection()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +857,7 @@
        "[AppDbDocument(_collection_id='0f68f250-df2c-4a15-98ef-9cdd851602eb', _identity_columns=[], _id='302663f9-c0bc-4413-894a-3075711b3600', _created_on_dt=datetime.datetime(2024, 5, 30, 7, 45, 25, 355000, tzinfo=tzutc()), _updated_on_dt=datetime.datetime(2024, 5, 30, 10, 14, 7, 365000, tzinfo=tzutc()), content={'htmlEasy': {'js': 'fakeEmail = \"ar@test.com\";\\r\\n// fakeEmail = domo.env.userEmail;\\r\\n\\r\\n//Available globals\\r\\nvar domo = window.domo; // For more on domo.js: https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\r\\nvar datasets = window.datasets;\\r\\n\\r\\nlet whoami = domo.env.userId\\r\\nconsole.log(whoami)\\r\\nwhoami = 612085674 //noah\\r\\n\\r\\nSQL_activityLog = \"select `SOURCE_ID` as user_id, `Object_ID` as page_id, count(*) as viewCount FROM dataset1 where `Action` = \\'VIEWED\\' and `Object_Type` = \\'PAGE\\' and `SOURCE_ID` = \\'\" + whoami +\"\\'  GROUP BY `Object_ID`, `Source_ID` ORDER BY count(*)\"\\r\\n\\r\\nfunction mergeRowsColumns(rows, columns) {\\r\\n  return rows.map((row) => {\\r\\n    let obj = {};\\r\\n    row.forEach((item, index) => {\\r\\n      obj[columns[index]] = item;\\r\\n    });\\r\\n    return obj;\\r\\n  });\\r\\n}\\r\\n\\r\\nconst get_data = async (sql_str, dataset_alias) => {\\r\\n  api_str = `/sql/v1/${dataset_alias}`;\\r\\n  console.log(api_str, sql_str);\\r\\n\\r\\n  res = await domo.post(api_str, sql_str, { contentType: \"text/plain\" });\\r\\n\\r\\n  return mergeRowsColumns((rows = res.rows), (columns = res.columns));\\r\\n};\\r\\n\\r\\nconst paint_links = (links)=> {\\r\\n  return links.reduce( (accum, link) =>  {\\r\\n    accum += `<div >${link.page_id}<div>`\\r\\n    return accum } \\r\\n    , \"\")\\r\\n}\\r\\n\\r\\nconst main = async () => {\\r\\n  const whodiv = document.getElementById(\\'whoami\\')\\r\\n  whodiv.innerHTML = whoami\\r\\n  \\r\\n  const mydiv = document.getElementById(\\'myDiv\\')\\r\\n  \\r\\n  const data = await get_data(sql_str = SQL_activityLog, \\'dataset1\\')\\r\\n  console.log(mydiv)\\r\\n  mydiv.innerHTML = paint_links(data)\\r\\n}\\r\\n\\r\\nmain()', 'html': '<div>\\n  <div id = \"whoami\"/>\\n  <div id = \"myDiv\" />\\n</div>', 'css': '#myDiv {\\n  display: flex;\\n  align-items: center;\\n  justify-content: center;\\n  background: rgb(131,58,180);\\n\\tbackground: linear-gradient(90deg, rgba(121,64,161,1) 0%, rgba(228,88,80,1) 50%, rgba(251,141,52,1) 100%);\\n  height: calc(100vh);\\n}\\n\\nh1 {\\n  color: white;\\n}'}})]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
