--- a/nbs/feature/cards.ipynb
+++ b/nbs/feature/cards.ipynb
@@ -35,13 +35,15 @@
     "from dataclasses import dataclass, field\n",
     "\n",
     "from typing import List, Any\n",
-    "import datetime as dt\n",
-    "from numbers import Number\n",
     "\n",
     "import mbison.client.core as dmda\n",
     "import mbison.client.utils as dmut\n",
+    "from copy import deepcopy\n",
     "\n",
-    "from nbdev.showdoc import patch_to"
+    "from nbdev.showdoc import patch_to\n",
+    "\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -52,7 +54,6 @@
    "source": [
     "#| hide\n",
     "import nbdev\n",
-    "import os\n",
     "from pprint import pprint"
    ]
   },
@@ -152,7 +153,7 @@
     "        arr_fn=arr_fn,\n",
     "        offset_params={\"limit\": \"limit\", \"offset\": \"skip\"},\n",
     "        offset_params_is_header=True,\n",
-    "        params = {'parts': optional_parts}\n",
+    "        params = {'parts': optional_parts},\n",
     "\n",
     "        request_type=\"POST\",\n",
     "        endpoint=endpoint,\n",
@@ -185,7 +186,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "191\n"
+      "195\n"
      ]
     },
     {
@@ -435,99 +436,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
+    "# | exports\n",
+    "\n",
+    "class Card_DownloadSourceCode(dmda.Class_Exception):\n",
+    "    def __init__(self, cls, auth, message):\n",
+    "        super().__init__(cls = cls, auth = auth, message = message)\n",
+    "\n",
+    "\n",
     "\n",
     "@patch_to(DomoCard)\n",
-    "def get_collections(self, debug_api : bool = False, return_raw: bool = False):\n",
+    "def get_collections(self, debug_api: bool = False, return_raw: bool = False):\n",
     "    import mbison.feature.appdb as dmdb\n",
-    "    \n",
-    "    res  = dmdb.get_collections(datastore_id= self.datastore_id, auth = auth, debug_api= debug_api)\n",
+    "\n",
+    "    res = dmdb.get_collections(\n",
+    "        datastore_id=self.datastore_id, auth=self.auth, debug_api=debug_api\n",
+    "    )\n",
     "\n",
     "    if return_raw:\n",
     "        return res\n",
     "\n",
-    "    self.domo_collections = [ dmdb.AppDbCollection.get_by_id(collection_id = obj['id'], auth = auth, debug_api = debug_api) for obj in res.response]\n",
+    "    self.domo_collections = [\n",
+    "        dmdb.AppDbCollection.get_by_id(\n",
+    "            collection_id=obj[\"id\"], auth=self.auth, debug_api=debug_api\n",
+    "        )\n",
+    "        for obj in res.response\n",
+    "    ]\n",
     "\n",
     "    return self.domo_collections\n",
     "\n",
     "\n",
     "@patch_to(DomoCard)\n",
-    "def get_source_code(self, debug_api : bool = False):\n",
-    "    self.get_collections(debug_api = debug_api)\n",
+    "def get_source_code(self, debug_api: bool = False, try_auto_share: bool = False):\n",
     "\n",
-    "    collection_name = 'ddx_app_client_code'\n",
-    "    code_collection = next((domo_collection for domo_collection in self.domo_collections if domo_collection.name ==collection_name), None)\n",
+    "    self.get_collections(debug_api=debug_api)\n",
+    "\n",
+    "    collection_name = \"ddx_app_client_code\"\n",
+    "    code_collection = next(\n",
+    "        (\n",
+    "            domo_collection\n",
+    "            for domo_collection in self.domo_collections\n",
+    "            if domo_collection.name == collection_name\n",
+    "        ),\n",
+    "        None,\n",
+    "    )\n",
     "\n",
     "    if not code_collection:\n",
-    "        raise dmda.Class_Exception(cls = self, message = f\"collection - {collection_name} not found\")\n",
-    "    \n",
-    "    self.domo_source_code = code_collection.query_documents(debug_api = debug_api)[0]\n",
+    "        raise Card_DownloadSourceCode(\n",
+    "            cls=deepcopy(self),\n",
+    "            auth=self.auth,\n",
+    "            message=f\"collection - {collection_name} not found for {self.title} - {self.id}\",\n",
+    "        )\n",
     "\n",
-    "    return self.domo_source_code\n"
+    "    documents = code_collection.query_documents(\n",
+    "        debug_api=debug_api, try_auto_share=try_auto_share\n",
+    "    )\n",
+    "\n",
+    "    if not documents:\n",
+    "        raise Card_DownloadSourceCode(\n",
+    "            cls=deepcopy(self),\n",
+    "            auth=self.auth,\n",
+    "            message=f\"collection - {collection_name} - {code_collection.id} - unable to retrieve documents for {self.title} - {self.id}\",\n",
+    "        )\n",
+    "\n",
+    "    self.domo_source_code = documents[0]\n",
+    "\n",
+    "    return self.domo_source_code\n",
+    "\n",
+    "\n",
+    "@patch_to(DomoCard)\n",
+    "def download_source_code(\n",
+    "    self,\n",
+    "    download_folder=\"./EXPORT/\",\n",
+    "    file_name=None,\n",
+    "    debug_api: bool = False,\n",
+    "    try_auto_share: bool = False,\n",
+    "):\n",
+    "    doc = self.get_source_code(debug_api=debug_api, try_auto_share=try_auto_share)\n",
+    "\n",
+    "    if file_name:\n",
+    "        download_path = os.path.join(\n",
+    "            download_folder, dmut.change_suffix(file_name, new_extension=\".json\")\n",
+    "        )\n",
+    "        dmut.upsert_folder(download_path)\n",
+    "\n",
+    "        with open(download_path, \"w+\", encoding=\"utf-8\") as f:\n",
+    "            f.write(json.dumps(doc.content))\n",
+    "            return doc\n",
+    "\n",
+    "    ddx_type = next(iter(doc.content))\n",
+    "\n",
+    "\n",
+    "    for key, value in doc.content[ddx_type].items():\n",
+    "        if key == \"js\":\n",
+    "            file_name = \"app.js\"\n",
+    "        elif key == \"html\":\n",
+    "            file_name = \"index.html\"\n",
+    "        elif key == \"css\":\n",
+    "            file_name = \"styles.css\"\n",
+    "        else:\n",
+    "            file_name = f\"{key}.txt\"\n",
+    "\n",
+    "        download_path = os.path.join(\n",
+    "            download_folder, f\"{ddx_type}/{self.id}/{file_name}\"\n",
+    "        )\n",
+    "        dmut.upsert_folder(download_path)\n",
+    "\n",
+    "        with open(download_path, \"w+\", encoding=\"utf-8\") as f:\n",
+    "            f.write(value)\n",
+    "\n",
+    "    return doc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'htmlBlank': {'css': '',\n",
-      "               'html': '',\n",
-      "               'js': '// DDX Bricks Wiki - See '\n",
-      "                     'https://developer.domo.com/docs/ddx-bricks/getting-started-using-ddx-bricks\\n'\n",
-      "                     '// for tips on getting started, linking to Domo data and '\n",
-      "                     'debugging your app\\n'\n",
-      "                     ' \\n'\n",
-      "                     '//Available globals\\n'\n",
-      "                     'var domo = window.domo; // For more on domo.js: '\n",
-      "                     'https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\n'\n",
-      "                     'var datasets = window.datasets;\\n'\n",
-      "                     '\\n'\n",
-      "                     '//Step 1. Select your dataset(s) from the button in the '\n",
-      "                     'bottom left corner\\n'\n",
-      "                     '\\n'\n",
-      "                     '\\n'\n",
-      "                     '\\n'\n",
-      "                     '//Step 2. Query your dataset(s): '\n",
-      "                     'https://developer.domo.com/docs/dev-studio-references/data-api\\n'\n",
-      "                     \"var fields = ['state', 'revenue'];\\n\"\n",
-      "                     \"var groupby = ['state'];\\n\"\n",
-      "                     'var query = '\n",
-      "                     '`/data/v1/${datasets[0]}?fields=${fields.join()}&groupby=${groupby.join()}`;\\n'\n",
-      "                     'domo.get(query).then(handleResult);\\n'\n",
-      "                     '\\n'\n",
-      "                     '\\n'\n",
-      "                     '\\n'\n",
-      "                     '//Step 3. Do something with the data from the query '\n",
-      "                     'result\\n'\n",
-      "                     'function handleResult(data){\\n'\n",
-      "                     '  console && console.log(data);\\n'\n",
-      "                     '}'}}\n"
+      "js app.js\n",
+      "html index.html\n",
+      "css styles.css\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AppDbDocument(_collection_id='475cc3b8-4318-406a-8070-c023bf0b9152', _identity_columns=[], _id='3ed44deb-ce70-4e88-9fc7-985cb7f21435', _created_on_dt=datetime.datetime(2023, 5, 5, 21, 54, 30, 178000, tzinfo=tzutc()), _updated_on_dt=datetime.datetime(2023, 11, 2, 15, 18, 2, 629000, tzinfo=tzutc()), content={'htmlBlank': {'js': \"// DDX Bricks Wiki - See https://developer.domo.com/docs/ddx-bricks/getting-started-using-ddx-bricks\\n// for tips on getting started, linking to Domo data and debugging your app\\n \\n//Available globals\\nvar domo = window.domo; // For more on domo.js: https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\nvar datasets = window.datasets;\\n\\n//Step 1. Select your dataset(s) from the button in the bottom left corner\\n\\n\\n\\n//Step 2. Query your dataset(s): https://developer.domo.com/docs/dev-studio-references/data-api\\nvar fields = ['state', 'revenue'];\\nvar groupby = ['state'];\\nvar query = `/data/v1/${datasets[0]}?fields=${fields.join()}&groupby=${groupby.join()}`;\\ndomo.get(query).then(handleResult);\\n\\n\\n\\n//Step 3. Do something with the data from the query result\\nfunction handleResult(data){\\n  console && console.log(data);\\n}\", 'html': '', 'css': ''}})"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "domo_card = DomoCard.get_by_id(\n",
-    "    card_id=577316875,\n",
-    "    auth = auth,\n",
-    "    return_raw = False\n",
-    ")\n",
+    "domo_card = DomoCard.get_by_id(card_id=577316875, auth=auth, return_raw=False)\n",
     "\n",
-    "domo_source_code_document = domo_card.get_source_code()\n",
-    "pprint(domo_source_code_document.content)"
+    "# domo_source_code_document = domo_card.get_source_code()\n",
+    "# pprint(domo_source_code_document.content)\n",
+    "\n",
+    "domo_card.download_source_code(download_folder=\"../../TEST/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
